# gatun

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
.github/workflows/: ci.yml  pre-commit.yml  publish.yml  spark-integration.yml
benchmarks/: benchmark_arrow.py  profile_hotspots.py
docs/: benchmarks.md  bridge_adapter_spec.md  pyspark-integration.md
gatun-core/: build.gradle.kts
gatun-core/src/main/java/org/gatun/server/: ArrowMemoryHandler.java  BoundedCache.java  GatunServer.java  MethodResolver.java  ReflectionCache.java  ResourceLimits.java  SessionQuota.java
gatun-core/src/main/java/org/gatun/server/observability/: GatunEvents.java  Metrics.java  RequestContext.java  RequestRingBuffer.java  SessionObserver.java  StructuredLogger.java
python/: gatun_build_backend.py  pyproject.toml
python/benchmarks/: __init__.py  bench_gatun_vs_py4j.py  benchmark_arrow.py  benchmark_callbacks.py  benchmark_comparison.py  benchmark_vectorized.py  profile_hotspots.py
python/src/gatun/: __init__.py  arena.py  async_client.py  bridge_adapters.py  client.py  config.py  launcher.py  py4j_compat.py
python/tests/: conftest.py  test_arrays.py  test_arrow.py  test_async.py  test_auto_convert.py  test_bridge.py  test_bridge_contract.py  test_callbacks.py  test_config.py  test_connect.py  test_differential.py  test_exceptions.py  test_fuzz.py  test_gatun_core.py  test_jvm_view.py  test_property.py  test_py4j_compat.py  test_pyspark_compat.py  test_scala_compat.py  test_size_validation.py  test_type.py  test_type_hints.py  test_varargs.py
schemas/: commands.fbs
scripts/: crash_test.py  test_spark_gatun.py
src/gatun/: __init__.py  arena.py  async_client.py  client.py
tests/: test_arrow.py  test_size_validation.py  test_spark_integration.py
