[project]
name = "gatun"
version = "0.1.0"
description = "Modern Python client for Project Gatun"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flatbuffers>=23.5.26",
    "pyarrow>=22.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "gatun_build_backend"
backend-path = ["."]

[dependency-groups]
dev = [
    "hypothesis>=6.100.0",
    "py4j>=0.10.9.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.14.9",
]

[tool.setuptools.package-data]
gatun = ["jars/*.jar"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
