[project]
name = "gatun"
version = "0.2.0"
description = "High-performance Python-to-Java bridge using shared memory (experimental)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "flatbuffers>=23.5.26",
    "pyarrow>=22.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "gatun_build_backend"
backend-path = ["."]

[dependency-groups]
dev = [
    "hypothesis>=6.100.0",
    "py4j>=0.10.9.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.9",
]

[tool.setuptools.package-data]
gatun = ["jars/*.jar"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=gatun --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/gatun"]
branch = true
omit = [
    "src/gatun/generated/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 0
show_missing = true
